add logout and cors module
